# ros2_training

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  zshrc
ros2_ws/src/trn/: .clang-format  CMakeLists.txt  Makefile  README.md  package.xml  trn.code-workspace
ros2_ws/src/trn/src/: trn.cpp
ros2_ws/src/trn/trn/: CMakeLists.txt  package.xml
ros2_ws/src/trn/trn/include/trn/: trn.hpp
ros2_ws/src/trn/trn/src/: trn.cpp
ros2_ws/src/trn/trn_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/trn/trn_interfaces/action/: Command.action
ros2_ws/src/trn/trn_interfaces/srv/: Command.srv
