<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trn</name>
  <version>0.1.0</version>
  <description>training</description>
  <maintainer email="hryktnk@gmail.com">rosuser</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>trn_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>random_numbers</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>trn_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
